[gd_scene load_steps=5 format=3 uid="uid://bjkyynlr4lwhf"]

[ext_resource type="Script" uid="uid://5grm6cw632bf" path="res://TileInventory/UI/test_ui.gd" id="1_73ub3"]
[ext_resource type="PackedScene" uid="uid://bhpyh13bdip01" path="res://TileInventory/UI/tile_inventory_ui.tscn" id="1_d305y"]
[ext_resource type="Script" uid="uid://cmi4lvx0gugcv" path="res://TileInventory/tile_inventory.gd" id="2_vegq2"]
[ext_resource type="PackedScene" uid="uid://xexgivj5yp3t" path="res://TileInventory/item.tscn" id="4_qmr6s"]

[node name="TestUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_73ub3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TestInterface" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Update" type="Button" parent="PanelContainer/HBoxContainer/TestInterface"]
layout_mode = 2
text = "Update"

[node name="Sort" type="Button" parent="PanelContainer/HBoxContainer/TestInterface"]
layout_mode = 2
text = "Sort
"

[node name="ModeContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/TestInterface"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/TestInterface/ModeContainer"]
layout_mode = 2
text = "Mode: "

[node name="Mode" type="OptionButton" parent="PanelContainer/HBoxContainer/TestInterface/ModeContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Add/Remove"
popup/item_0/id = 0
popup/item_1/text = "Move"
popup/item_1/id = 1
popup/item_2/text = "Rotate"
popup/item_2/id = 2

[node name="RotationContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/TestInterface"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/TestInterface/RotationContainer"]
layout_mode = 2
text = "Rotation: "

[node name="RotationSelection" type="OptionButton" parent="PanelContainer/HBoxContainer/TestInterface/RotationContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
allow_reselect = true
item_count = 4
popup/item_0/text = "Up"
popup/item_0/id = 0
popup/item_1/text = "Left"
popup/item_1/id = 1
popup/item_2/text = "Right"
popup/item_2/id = 2
popup/item_3/text = "Down"
popup/item_3/id = 3

[node name="ShapeContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/TestInterface"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/TestInterface/ShapeContainer"]
layout_mode = 2
text = "Shape: "

[node name="ShapeOptions" type="OptionButton" parent="PanelContainer/HBoxContainer/TestInterface/ShapeContainer"]
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true
item_count = 1
popup/item_0/text = "Test"
popup/item_0/id = 0

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="TileInventory_UI" parent="PanelContainer/HBoxContainer" node_paths=PackedStringArray("inventory") instance=ExtResource("1_d305y")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
inventory = NodePath("../../../TileInventory")

[node name="TileInventory" type="Node" parent="."]
script = ExtResource("2_vegq2")
h = 10
w = 20
metadata/_custom_type_script = "uid://cmi4lvx0gugcv"

[node name="Items" type="Node" parent="."]

[node name="shape 1" parent="Items" instance=ExtResource("4_qmr6s")]
ID = "item 1"
shape_str = "0101101011110100"

[node name="shape 2" parent="Items" instance=ExtResource("4_qmr6s")]
h = 3
w = 3
ID = "item 2"
max_item_stack = 5
shape_str = "111010101"

[node name="shape 3" parent="Items" instance=ExtResource("4_qmr6s")]
h = 5
w = 5
ID = "item 3"
max_item_stack = 2
shape_str = "1101101110001000101011001"

[node name="shape 4" parent="Items" instance=ExtResource("4_qmr6s")]
h = 5
w = 2
ID = "item 4"
max_item_stack = 2
shape_str = "0101101011"

[connection signal="pressed" from="PanelContainer/HBoxContainer/TestInterface/Update" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/TestInterface/Sort" to="." method="_on_sort_pressed"]
[connection signal="click_event" from="PanelContainer/HBoxContainer/TileInventory_UI" to="." method="_on_tile_inventory_ui_click_event"]
